[1.547] sync, upgrade link for 6.9 - faq/index.html

--- a/faq/index.html
+++ b/faq/index.html
@@ -35,7 +35,7 @@ OpenBSD, так и <a href="http://www.openbsd.org/cgi-bin/man.cgi">онлайн
     <td><a href="ports/index.html"                          >Книга по портам</a></td>
   </tr>
   <tr>
-    <td><a href="https://www.openbsd.org/faq/upgrade68.html">Обновление до 6.8</a></td>
+    <td><a href="https://www.openbsd.org/faq/upgrade69.html">Обновление до 6.9</a></td>
     <td><a href="../mail.html"                              >Почтовые рассылки</a></td>
     <td><a href="ports/testing.html"                        >Тестирование портов</a></td>
   </tr>
@@ -178,7 +178,7 @@ XXX  -->
 <li><a href="https://www.openbsd.org/faq/faq13.html#default"    >Choosing the Default Audio Device</a>
 <li><a href="https://www.openbsd.org/faq/faq13.html#audioprob"  >Debugging Audio Problems</a>
 <li><a href="https://www.openbsd.org/faq/faq13.html#midi"       >Using MIDI Instruments</a>
-<li><a href="https://www.openbsd.org/faq/faq13.html#webcam"     >Using a webcam</a>
+<li><a href="https://www.openbsd.org/faq/faq13.html#webcam"     >Using a Webcam</a>
 </ul>
 
 <h3><a href="faq16.html">Виртуализация</a></h3>
