[1.242] sync, adding riscv64 - faq/faq1.html

--- a/faq/faq1.html
+++ b/faq/faq1.html
@@ -134,6 +134,9 @@ OpenBSD работает на следующих <a href="../plat.html">плат
   <li><a href="https://www.openbsd.org/macppc.html"   >macppc</a>
   <li><a href="https://www.openbsd.org/octeon.html"   >octeon</a>
   <li><a href="../powerpc64.html"                     >powerpc64</a>
+  <!--
+  <li><a href="../riscv64.html"   >riscv64</a>
+  -->
   <li><a href="https://www.openbsd.org/sparc64.html"  >sparc64</a>
 </ul>
 
