[1.749] sync, update link to image - index.html

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 
 <h2>
 	<a href="https://www.openbsd.org/69.html">
-	<img src="images/puffy69.png" height="198" width="599" alt="[OpenBSD 6.9]">
+	<img src="images/puffy69.jpg" height="198" width="599" alt="[OpenBSD 6.9]">
 	</a>
 </h2>
 
