--- a/anoncvs.html
+++ b/anoncvs.html
@@ -134,11 +134,11 @@ $ <b>cvs -qd anoncvs@anoncvs.ca.openbsd.org:/cvs checkout -P src</b>
 </pre>
 
 <p>
-Если вы хотите использовать 6.8 -stable branch:
+Если вы хотите использовать 6.9 -stable branch:
 
 <pre class="cmdbox">
 $ <b>cd /usr</b>
-$ <b>cvs -qd anoncvs@anoncvs.ca.openbsd.org:/cvs checkout -rOPENBSD_6.8 -P src</b>
+$ <b>cvs -qd anoncvs@anoncvs.ca.openbsd.org:/cvs checkout -rOPENBSD_6_9 -P src</b>
 </pre>
 <!-- DO NOT EDIT ANONCVS.HTML MANUALLY - IT IS GENERATED FROM TEMPLATES! -->
 
@@ -178,11 +178,11 @@ $ <b>cvs -q up -Pd -A</b>
 </pre>
 
 <p>
-Если вы используете 6.8 -stable branch:
+Если вы используете 6.9 -stable branch:
 
 <pre class="cmdbox">
 $ <b>cd /usr/src</b>
-$ <b>cvs -q up -Pd -rOPENBSD_6.8</b>
+$ <b>cvs -q up -Pd -rOPENBSD_6_9</b>
 </pre>
 
 <p>
@@ -224,11 +224,11 @@ $ <b>cvs -qd anoncvs@anoncvs.ca.openbsd.org:/cvs checkout -P ports</b>
 </pre>
 
 <p>
-Если нужен 6.8 -stable branch:
+Если нужен 6.9 -stable branch:
 
 <pre class="cmdbox">
 $ <b>cd /usr</b>
-$ <b>cvs -qd anoncvs@anoncvs.ca.openbsd.org:/cvs checkout -rOPENBSD_6.8 -P ports</b>
+$ <b>cvs -qd anoncvs@anoncvs.ca.openbsd.org:/cvs checkout -rOPENBSD_6_9 -P ports</b>
 </pre>
 
 <li> В любое время обновить это дерево можно так:
@@ -242,11 +242,11 @@ $ <b>cvs -q up -Pd -A</b>
 </pre>
 
 <p>
-В случае с 6.8 -stable branch:
+В случае с 6.9 -stable branch:
 
 <pre class="cmdbox">
 $ <b>cd /usr/ports</b>
-$ <b>cvs -q up -Pd -rOPENBSD_6.8</b>
+$ <b>cvs -q up -Pd -rOPENBSD_6_9</b>
 </pre>
 
 </ul>
@@ -340,7 +340,7 @@ $ <b>du -shc *</b>
 Список anoncvs серверов можно найти на
 <a href="https://www.openbsd.org/anoncvs.html#CVSROOT">оригинальной английской странице</a>.
 Нет смысла дублировать этот список сюда, так как его синхронизация
-займет слишком много сил в времени.
+займет слишком много сил и времени.
 
 <p>
 Используйте <a href="https://man.openbsd.org/traceroute">traceroute(8)</a>
