[1.427] sync, OpenBGPD 6.9p0 - openbgpd/ftp.html

--- a/openbgpd/ftp.html
+++ b/openbgpd/ftp.html
@@ -16,7 +16,7 @@
 <hr>
 
 <p>
-Релиз портированной версии OpenBGPD 6.8p1 состоялся 5 ноября 2020 года.
+Релиз портированной версии OpenBGPD 6.9p0 состоялся 30 апреля 2021 года.
 
 <p>
 Портированная OpenBGPD - это версия/порт для других операционных систем.
