--- a/libressl/index.html
+++ b/libressl/index.html
@@ -40,8 +40,8 @@
 </h2>
 
 <p id="callout">
-<a href="https://ftp.openbsd.org/pub/OpenBSD/LibreSSL/libressl-3.2.5-relnotes.txt">LibreSSL 3.2.5</a>
-вышла 17 матра 2021 года
+<a href="https://ftp.openbsd.org/pub/OpenBSD/LibreSSL/libressl-3.3.3-relnotes.txt">LibreSSL 3.3.3</a>
+вышла 3 мая 2021 года
     
 <p>
 LibreSSL представляет из себя криптографический TLS-стек,
@@ -57,8 +57,7 @@ LibreSSL представляет из себя криптографически
 для других ОС (Linux, FreeBSD, Windows, и.т.д.).
 
 <p>
-Последним stable релизом является 3.2.5.<br>
-Последним development релизом является 3.3.2<br>
+Последним stable релизом является 3.3.3.<br>
 Больше информации можно найти на странице
 <a href="releases.html">доступных версий</a>.
 
