--- a/ftp.html
+++ b/ftp.html
@@ -47,6 +47,7 @@
 <li><b>/pub/OpenBSD/6.9/</b><br>
 	Где можно найти последний релиз.
   <ul>
+  <!-- XXXrelease: make sure platform list is current -->
   <li><b>alpha/</b>
   <li><b>amd64/</b>
   <li><b>arm64/</b>
@@ -62,7 +63,9 @@
 	Бинарные пакеты (скомпилированные порты) для установки в
 	-release или -stable системах.
   <li><b>powerpc64/</b>
-  <li><b>sgi/</b>
+  <!--
+  <li><b>riscv64/</b>
+  -->
   <li><b>sparc64/</b>
   <li><b>src.tar.gz</b><br>
 	Userland исходники, которые находятся в <code>/usr/src</code>.
