[1.431] sync - openbgpd/ftp.html

--- a/openbgpd/ftp.html
+++ b/openbgpd/ftp.html
@@ -16,7 +16,7 @@
 <hr>
 
 <p>
-Релиз портированной версии OpenBGPD 6.9p0 состоялся 30 апреля 2021 года.
+Релиз портированной версии OpenBGPD 7.0 состоялся 4 июня 2021 года.
 
 <p>
 Портированная OpenBGPD - это версия/порт для других операционных систем.
