--- a/rpki-client/index.html
+++ b/rpki-client/index.html
@@ -39,8 +39,8 @@
 
 <p id="callout">
 
-<a href="https://ftp.openbsd.org/pub/OpenBSD/rpki-client/rpki-client-7.0.txt">rpki-client 7.0</a>
-вышел 15 апреля 2021 года.
+<a href="https://ftp.openbsd.org/pub/OpenBSD/rpki-client/rpki-client-7.1.txt">rpki-client 7.1</a>
+вышел 18 мая 2021 года.
 
 <p>
 <a href="https://man.openbsd.org/rpki-client">rpki-client</a>
