[1.30] sync, release 7.1 - rpki-client/portable.html

--- a/rpki-client/portable.html
+++ b/rpki-client/portable.html
@@ -16,7 +16,7 @@
 <hr>
 
 <p>
-Портированная версия rpki-client 7.0 вышла 15 апреля 2021 года.
+Портированная версия rpki-client 7.1 вышла 18 мая 2021 года.
 
 <p>
 Портированная версия rpki-client работает и на нескольких других UNIX системах,
@@ -38,7 +38,7 @@
 <ul>
 	<li>OpenBSD
 	<li>Linux (Alpine 3.12, Debian 9, Debian 10, Fedora 31, Fedora 32, Fedora 33, RHEL/CentOS 7, RHEL/CentOS 8)
-	<li>macOS Catalina
+	<li>macOS
 	<li>Windows Subsystem for Linux 2
 </ul>
 
