--- a/index.html
+++ b/index.html
@@ -1,142 +1,144 @@
 <!doctype html>
-<html lang=ru id=project-main>
-	<meta charset=utf-8>
+<html lang="ru" id="project-main">
+<head>
+	<meta charset="utf-8"/>
 	<title>OpenBSD</title>
-	<meta name="description" content="the main OpenBSD page">
-	<link rel="canonical" href="https://www.openbsd.org/">
-	<link rel="stylesheet" href="openbsd.css">
-	<link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+	<meta name="description" content="The main OpenBSD page"/>
+	<link rel="canonical" href="https://www.openbsd.org"/>
+	<link rel="stylesheet" type="text/css" href="openbsd.css"/>
+	<link rel="icon" type="image/x-icon" href="favicon.ico"/>
+</head>
+<body>
+	<main>
+		<nav>
+			<header>Проект OpenBSD</header>
+			<ul>
+				<li><a href="goals.html">Цели проекта</a></li>
+				<li><a href="plat.html">Платформы</a></li>
+				<li><a href="security.html">Безопасность</a></li>
+				<li><a href="crypto.html">Криптография</a></li>
+				<li><a href="https://www.openbsd.org/events.html">Встречи и доклады</a></li>
+				<li><a href="https://www.openbsd.org/innovations.html">Инновации</a></li>
+			</ul>
 
-<main>
-<nav>
+			<header>Скачать OpenBSD</header>
+			<ul>
+				<li><a href="faq/faq4.html#Download">Загрузка</a></li>
+			</ul>
 
-<header>Проект OpenBSD</header>
-<ul>
-	<li><a href="goals.html">Цели проекта</a>
-	<li><a href="plat.html">Платформы</a>
-	<li><a href="security.html">Безопасность</a>
-	    <a href="crypto.html">Криптография</a>
-	<li><a href="https://www.openbsd.org/events.html">Встречи и доклады</a>
-	<li><a href="https://www.openbsd.org/innovations.html">Инновации</a>
-</ul>
+			<header>Исходники</header>
+			<ul>
+				<li><a href="anoncvs.html">AnonCVS</a></li>
+				<li><a href="https://cvsweb.openbsd.org/">CVS Web</a></li>
+				<li><a href="https://github.com/openbsd">GitHub зеркало</a></li>
+			</ul>
 
-<header>Скачать OpenBSD</header>
-<ul>
-	<li><a href="faq/faq4.html#Download">Загрузка</a>
-</ul>
+			<header>Информация</header>
+			<ul>
+				<li><a href="https://www.openbsd.org/plus.html">Журнал изменений</a></li>
+				<li><a href="faq/index.html">FAQ</a></li>
+				<li><a href="https://man.openbsd.org">Man-страницы</a></li>
+				<li><a href="https://www.openbsd.org/errata69.html">Патчи</a></li>
+				<li><a href="report.html">Сообщить об ошибке</a></li>
+				<li><a href="mail.html">Почтовые рассылки</a></li>
+				<li><a href="https://www.openbsd.org/lyrics.html">Песни</a> &amp;
+					<a href="artwork.html">Иллюстрации</a></li>
+				<li><a href="hackathons.html">Хакатоны</a></li>
+				<li><a href="https://www.openbsd.org/groups.html">Группы пользователей</a></li>
+				<li><a href="https://www.openbsd.org/support.html">Поддержка</a></li>
+			</ul>
 
-<header>Исходники</header>
-<ul>
-	<li><a href="anoncvs.html">AnonCVS</a>
-	<li><a href="https://cvsweb.openbsd.org/">CVS Web</a>
-	<li><a href="https://github.com/openbsd">GitHub зеркало</a>
-</ul>
+			<header>Поддержка OpenBSD</header>
+			<ul>
+				<li><a href="https://www.openbsd.org/donations.html">Пожертвования</a></li>
+				<br/>
+				<li><a href="https://openbsdstore.com/">Art Merchandise</a></li>
+				<li><a href="https://www.openbsdfoundation.org/"><i>OpenBSD Foundation</i></a></li>
+			</ul>
 
-<header>Информация</header>
-<ul>
-	<li><a href="https://www.openbsd.org/plus.html">Changelog</a>
-	<li><a href="faq/index.html">FAQ</a>
-	<li><a href="https://man.openbsd.org">Man-страницы</a>
-	<li><a href="https://www.openbsd.org/errata69.html">Патчи</a>
-	<li><a href="report.html">Сообщить об ошибке</a>
-	<li><a href="mail.html">Почтовые рассылки</a>
-	<li><a href="https://www.openbsd.org/lyrics.html">Песни</a> &amp;
-	    <a href="artwork.html">Иллюстрации</a>
-	<li><a href="hackathons.html">Хакатоны</a>
-	<li><a href="https://www.openbsd.org/groups.html">Группы пользователей</a>
-	<li><a href="https://www.openbsd.org/support.html">Поддержка</a>
-</ul>
+			<header>Русское сообщество</header>
+			<ul>
+				<li><a href="ru-community/articles.html">Статьи</a></li>
+				<li><a href="https://webchat.freenode.net?channels=%23openbsd-russian">Freenode IRC канал</a></li>
+				<li><a href="https://t.me/openbsd_ru">Telegram канал</a></li>
+				<li><a href="https://vk.com/openbsd_hackers">Группа в VK</a></li>
+				<li><a href="https://github.com/openbsd-ru">Проект на GitHub</a></li>
+			</ul>
+		</nav>
+		<article>
+			<h2>
+				<a href="https://www.openbsd.org/69.html">
+					<img src="images/puffy69.jpg" width="599" height="198" alt="[OpenBSD 6.9]"/>
+				</a>
+			</h2>
 
-<header>Поддержка OpenBSD</header>
-<ul>
-	<li><a href="https://www.openbsd.org/donations.html">Пожертвования</a><br>
-	<li><a href="https://openbsdstore.com/">Art Merchandise</a>
-	<li><a href="https://www.openbsdfoundation.org/"><i>OpenBSD Foundation</i></a>
-</ul>
-
-<header>Русское сообщество</header>
-<ul>
-	<li><a href="ru-community/articles.html">Статьи</a>
-	<li><a href="https://webchat.freenode.net?channels=%23openbsd-russian">freenode IRC канал</a>
-	<li><a href="https://t.me/openbsd_ru">telegram канал</a>
-	<li><a href="https://vk.com/openbsd_hackers">Группа в VK</a>
-	<li><a href="https://github.com/openbsd-ru">Проект на GitHub</a>
-</ul>
-
-</nav>
-<article>
-
-<h2>
-	<a href="https://www.openbsd.org/69.html">
-	<img src="images/puffy69.jpg" height="198" width="599" alt="[OpenBSD 6.9]">
-	</a>
-</h2>
-
-<p id="callout">
-Всего две удаленные уязвимости в стандартной установке
-за черт знает сколько лет!
-
-<p>
-В рамках проекта OpenBSD разрабатывается
-<strong>СВОБОДНАЯ</strong>, мультиплатформенная, основанная
-на коде 4.4BSD, UNIX-подобная операционная система.
-Мы придаем большое внимание
-переносимости, следованию стандартам, точности,
-<a href="security.html">безопасности</a> и
-<a href="crypto.html">криптографии</a>.
-В качестве примера успеха проекта можно назвать
-<a href="openssh/index.html">OpenSSH</a>,
-первоначально написанную для OpenBSD.
-
-<p>
-OpenBSD доступна для скачивания с нашей
-<a href="faq/faq4.html#Download">страницы загрузок</a>.
-
-<p>
-Последняя версия,
-<a href="https://www.openbsd.org/69.html">OpenBSD 6.9</a>,
-вышла 1 мая 2021 года.
-Это 50'й релиз.
-
-<p>
-OpenBSD разрабатывается добровольцами. Процесс разработки,
-а также <a href="hackathons.html">встречи разработчиков</a>,
-возможны благодаря финансовым взносам, собранным
-<a href="https://www.openbsdfoundation.org">OpenBSD Foundation</a>.
-Эти пожертвования гарантируют
-<a href="https://www.openbsd.org/policy.html">свободу</a>
-и дальнейшую разработку OpenBSD.
-
-</article>
-</main>
-
-<footer>
-<figure>
-	<a href="images/rack2009.jpg">
-	<img width="60" height="90" src="images/rack2009-s.png" alt="rack"></a>
-</figure>
-<aside>
-
-<hr>
-Дочерние проекты:
-<a href="openssh/index.html">OpenSSH</a>,
-<a href="openbgpd/index.html">OpenBGPD</a>,
-<a href="rpki-client/index.html">rpki-client</a>,
-<a href="openntpd/index.html">OpenNTPD</a>,
-<a href="opensmtpd/index.html">OpenSMTPD</a>,
-<a href="openiked/index.html">OpenIKED</a>,
-<a href="https://mandoc.bsd.lv">mandoc</a>,
-<a href="libressl/index.html">LibreSSL</a>
-<br>
-
-<small>
-<em>
-This site is a translated version of <a href="https://www.openbsd.org/">openbsd.org</a>.
-Translation project is organized by <a href="https://github.com/alexander-naumov">Alexander Naumov</a>
-and is going with the support of
-<a href="https://github.com/openbsd-ru/openbsd-ru.github.io/graphs/contributors">volunteers</a>.
-</em>
-</small>
-
-</aside>
-</footer>
+			<p id="callout">
+				Всего две удаленные уязвимости в стандартной установке
+				за черт знает сколько лет!
+			</p>
+			<p>
+				В рамках проекта OpenBSD разрабатывается
+				<strong>СВОБОДНАЯ</strong>, мультиплатформенная, основанная
+				на коде 4.4BSD, UNIX-подобная операционная система.
+				Мы придаем большое внимание
+				переносимости, следованию стандартам, точности,
+				<a href="security.html">безопасности</a> и
+				<a href="crypto.html">криптографии</a>.
+				В качестве примера успеха проекта можно назвать
+				<a href="openssh/index.html">OpenSSH</a>,
+				первоначально написанную для OpenBSD.
+			</p>
+			<p>
+				OpenBSD доступна для скачивания с нашей
+				<a href="faq/faq4.html#Download">страницы загрузок</a>.
+			</p>
+			<p>
+				Последняя версия,
+				<a href="https://www.openbsd.org/69.html">OpenBSD 6.9</a>,
+				вышла 1 мая 2021 года.
+				Это 50-ый релиз.
+			</p>
+			<p>
+				OpenBSD разрабатывается добровольцами. Процесс разработки,
+				а также <a href="hackathons.html">встречи разработчиков</a>,
+				возможны благодаря финансовым взносам, собранным
+				<a href="https://www.openbsdfoundation.org">OpenBSD Foundation</a>.
+				Эти пожертвования гарантируют
+				<a href="https://www.openbsd.org/policy.html">свободу</a>
+				и дальнейшую разработку OpenBSD.
+			</p>
+		</article>
+	</main>
+	<footer>
+		<figure>
+			<a href="images/rack2009.jpg">
+				<img width="60" height="90" src="images/rack2009-s.png" alt="rack"/>
+			</a>
+		</figure>
+		<aside>
+			<hr/>
+			Дочерние проекты:
+			<a href="openssh/index.html">OpenSSH</a>,
+			<a href="openbgpd/index.html">OpenBGPD</a>,
+			<a href="rpki-client/index.html">rpki-client</a>,
+			<a href="openntpd/index.html">OpenNTPD</a>,
+			<a href="opensmtpd/index.html">OpenSMTPD</a>,
+			<a href="openiked/index.html">OpenIKED</a>,
+			<a href="https://mandoc.bsd.lv">mandoc</a>,
+			<a href="libressl/index.html">LibreSSL</a>.
+			<br/>
+			<small>
+				<em>
+					Этот сайт представляет собой переведенную версию <a href="https://www.openbsd.org">openbsd.org</a>. 
+					Переводческий проект организован 
+					<a href="https://github.com/alexander-naumov">
+						Александром Наумовым
+					</a>
+					и реализуется при поддержке 
+					<a href="https://github.com/openbsd-ru/openbsd-ru.github.io/graphs/contributors">волонтеров</a>.
+				</em>
+			</small>
+		</aside>
+	</footer>
+</body>
+</html>
