[1.287] typo - amd64.html

--- a/amd64.html
+++ b/amd64.html
@@ -51,7 +51,7 @@ OpenBSD/amd64 работает на процессорах семейства AM
 <h4>Процессоры</h4>
 
 <p>
-Поддерживаются все версии процессоров AMD Athlon 64 и их клонов.
+Поддерживаются все версии процессоров AMD Athlon 64 и их клоны.
 
 <h3>Неподдерживаемое оборудование:</h3>
 
