[1.44] sync - arm64.html

--- a/arm64.html
+++ b/arm64.html
@@ -114,7 +114,6 @@ OpenBSD/arm64 работает на следующем железе:
 	<ul>
 		<li><a href="https://www.raspberrypi.org/products/raspberry-pi-3-model-b/">Raspberry Pi 3</a>
 		<li><a href="https://www.raspberrypi.org/products/raspberry-pi-3-model-b-plus/">Raspberry Pi 3 Model B+</a>
-			(но с ограничением; встроенная сетевоая карта не работает)
 		<li><a href="https://www.raspberrypi.org/products/raspberry-pi-4-model-b/specifications/">Raspberry Pi 4</a>
 		<li><a href="https://www.raspberrypi.org/products/raspberry-pi-400-unit/">Raspberry Pi 400</a>
 	</ul>
@@ -167,6 +166,8 @@ OpenBSD на этих машинах.
 	  для встроенной Allwinner EMAC 10/100/Gigabit Ethernet на Allwinner A64/H5
 	<li><a href="https://man.openbsd.org/arm64/msk.4">msk(4)</a>
 	  для встроенной Marvell Yukon-2 10/100/Gigabit Ethernet на OverDrive 1000
+	<li><a href="https://man.openbsd.org/arm64/mue.4">mue(4)</a>
+	  встроенная Microchip LAN75xx/LAN78xx 10/100/Gigabit USB Ethernet на Raspberry Pi 3 Model B+
 	<li><a href="https://man.openbsd.org/arm64/mvneta.4">mvneta(4)</a>
 	  встроенной Marvell ARMADA Ethernet на Marvell ARMADA 3K
 	<li><a href="https://man.openbsd.org/arm64/smsc.4">smsc(4)</a>
