[1.53] sync, typo - report.html

--- a/report.html
+++ b/report.html
@@ -72,7 +72,7 @@ h3 {
 можно воспроизвести проблему. Постарайтесь описать её с максимально возможной точностью
 и не вводящей в заблуждение терминологией, особенно если ошибку нелегко воспроизвести.
 Описывать проблемы словами "it crashes" («это ломается») или "I get strange
-interrupt issues on this one box that I built" («я получаю странные проблемы с
+interrupt issues on this one box that I built" («наблюдаю странные проблемы с
 прерываниями на этом одной из собранных мной машин») бессмысленно.
 Пообщайтесь с другими пользователями (в списках рассылки или на любом другом форуме,
 где собираются опытные люди) и постарайтесь получить подтверждение, что проблема
