[1.58] sync, typo - faq/ports/ports.html

--- a/faq/ports/ports.html
+++ b/faq/ports/ports.html
@@ -736,7 +736,7 @@ $ <b>make 2&gt;&amp;1 | /usr/ports/infrastructure/bin/portslogger ~/portlog</b>
 <code>debug-neomutt-20201127</code>).
 Эти пакеты содержат файлы с необходимой для отладки информацией (debug symbols);
 GDB знает, как загружать эти файлы автоматически. Debug-пакет должен
-соответствовать основному пакету: если вы используете snapshots, вам может
+соответствовать основному пакету: если вы используете snapshots, может
 потребоваться обновить пакет, чтобы быть увереным, что оба пакета собирались
 вместе (относятся к той же сборке). Устанавливается debug пакет, как и обычно,
 при помощи pkg_add:
