--- a/rpki-client/portable.html
+++ b/rpki-client/portable.html
@@ -16,7 +16,7 @@
 <hr>
 
 <p>
-Портированная версия rpki-client 7.1 вышла 18 мая 2021 года.
+Портированная версия rpki-client 7.2 вышла 28 июля 2021 года.
 
 <p>
 Портированная версия rpki-client работает и на нескольких других UNIX системах,
