[1.90] sync - faq/pf/index.html

--- a/faq/pf/index.html
+++ b/faq/pf/index.html
@@ -57,7 +57,7 @@ PF: Пакетный фильтр OpenBSD
 в OpenBSD. PF способен ограничивать TCP/IP трафик, предоставлять
 контроль над соединением, а также предоставляет возможность
 устанавливать приоритет для тех или иных пакетов.
-PF стал частью ядра GENERIC начиная с OpenBSD 3.0.
+PF стал частью ядра GENERIC начиная с OpenBSD версии 3.0.
 
 <p>
 PF был первоначально разработан Даниэлем Хартмеиером (Daniel Hartmeier),
