--- a/faq/pf/example1.html
+++ b/faq/pf/example1.html
@@ -57,7 +57,7 @@ PF - настройка маршрутизатора (Building a Router)
 
 <pre class="cmdbox">
 # <b>echo 'net.inet.ip.forwarding=1' >> /etc/sysctl.conf</b>
-# <b>echo 'dhcp' > /etc/hostname.em0</b> # if you have a static IP, use that instead
+# <b>echo 'dhcp' > /etc/hostname.em0</b> # or use a static IP
 # <b>echo 'inet 192.168.1.1 255.255.255.0 192.168.1.255' > /etc/hostname.em1</b>
 # <b>vi /etc/hostname.athn0</b>
 </pre>
