[1.116] sync, LibreSSL 3.3.4 - libressl/index.html

--- a/libressl/index.html
+++ b/libressl/index.html
@@ -40,9 +40,9 @@
 </h2>
 
 <p id="callout">
-<a href="https://ftp.openbsd.org/pub/OpenBSD/LibreSSL/libressl-3.3.3-relnotes.txt">LibreSSL 3.3.3</a>
-вышла 3 мая 2021 года
-    
+<a href="https://ftp.openbsd.org/pub/OpenBSD/LibreSSL/libressl-3.3.4-relnotes.txt">LibreSSL 3.3.4</a>
+вышла 24 августа 2021 года
+
 <p>
 LibreSSL представляет из себя криптографический TLS-стек,
 возникший как форк
